--- a/program/create_dataset/hashing/test_writing_speed.ipynb
+++ b/program/create_dataset/hashing/test_writing_speed.ipynb
@@ -23,7 +23,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "def get_hash(frame_path, hash_size, high_freq_factor):\n",
@@ -37,12 +36,17 @@
     "    diff = dctlowfreq > med\n",
     "    phash = [1 if x == True else 0 for x in diff.flatten()]\n",
     "    return phash"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def write_hashes_to_csv(path_film, wd_hashes, frame_paths, annotation):\n",
@@ -57,7 +61,13 @@
     "           'annotation': annotation}\n",
     "    dataset = pd.DataFrame.from_dict(data)\n",
     "    dataset.to_csv(wd_hashes + '{}-hashes-{}-{}.csv'.format(film_name, hash_size, high_freq_factor), index = False)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -184,6 +194,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.7"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
