--- a/program/evaluate_hashes/visualize_hashes_tf/convert_to_tensor.ipynb
+++ b/program/evaluate_hashes/visualize_hashes_tf/convert_to_tensor.ipynb
@@ -2,29 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import glob\n",
-    "import pandas as pd\n",
-    "import csv\n",
-    "import os\n",
-    "import numpy as np\n",
-    "from PIL import Image"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
@@ -130,6 +107,23 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.7"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [
+     "import torch\n",
+     "import glob\n",
+     "import pandas as pd\n",
+     "import csv\n",
+     "import os\n",
+     "import numpy as np\n",
+     "from PIL import Image"
+    ],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
